typos and renaming

--- a/dbt.tex
+++ b/dbt.tex
@@ -1,4 +1,4 @@
-\title{Relational algebra and calculi}
+\title{Relational Query Languages}
 \author{
         Artyom Desyatnikov
 }
@@ -260,7 +260,7 @@ Again, the division can be implemented in terms of the basic relational algebrai
 In this particular case it would be: $$\pi_{Student}(Completed) - \pi_{Student}(Completed -
 (DBProject \times \pi_{Student}(Completed)))$$.
 
-\section{Relation calculus}
+\section{Relational calculus}
 
 Having discussed the basics of relational algebra, we should note that
 creation of a low-level query execution planning language as it is
